--- a/css/style.css
+++ b/css/style.css
@@ -314,13 +314,13 @@ h3 {
     letter-spacing: 4px;
     line-height: 32px;
 }
-
+/*
     h3:after {
         color: #e6ae49;
         content: ".";
         font-size: 34px;
     }
-
+*/
 h4 {
     font-size: 17px;
     letter-spacing: 2px;
