--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,18 @@ h3 {
         font-size: 34px;
     }
 */
+.responsiveCal {
+ 
+position: relative; padding-bottom: 75%; height: 0; overflow: hidden;
+margin-left: 10%;  margin-right: 10%; padding-top: 5%;
+}
+ 
+.responsiveCal iframe {
+ 
+position: absolute;  left: 0; width: 100%; height: 100%;
+ 
+}
+
 h4 {
     font-size: 17px;
     letter-spacing: 2px;
