--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,11 @@ a {
 
 .video {
     display: block;
-}
+
+} 
+var vid = document.getElementById("media/eng_4_humanity.mp4");
+vid.muted = true;
+
 
 .audio {
     width: 100%;
@@ -1271,6 +1275,7 @@ form label.error {
     float: left;
     text-align: left;
     display: inline-block;
+    padding-left: 50px;
     position: relative;
     /*left: -100px;*/
 }
@@ -1315,6 +1320,12 @@ form label.error {
 /*------------------------------------------------------------------*/
 /* Navigation Menu Style */
 /*------------------------------------------------------------------*/
+
+.ion{
+    font-size:30px;
+    margin-right: 5px;
+
+}
 .nav-menu {
     position: static;
     float: right;
@@ -1351,8 +1362,8 @@ form label.error {
 .nav-menu ul.nav-menu-inner li a {
     font-family: inherit;
     display: block;
-    font-size: 25px;
-    line-height: 1;
+    font-size: 10px;
+    line-height: ;
     font-weight: 600;
     text-transform: uppercase;
     outline: none;
