--- a/css/style.css
+++ b/css/style.css
@@ -287,12 +287,17 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     margin-top: 0px;
     margin-bottom: 10px;
+
 }
 
 h1 {
-    font-size: 43px;
+    font-size: 30px;
     letter-spacing: 2px;
     line-height: 40px;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 25px;
 }
 
     h1.h1, h2.h2 {
